Fix calendar green bar visible over org selector
The green bar in the calendar which depicts the "current time" had a
higher z-index than the organization selector's dropdown.

Fixed by increasing organization selector's z-index.

--- a/frontend/styles/OrganisationSelector.scss
+++ b/frontend/styles/OrganisationSelector.scss
@@ -12,6 +12,7 @@
   }
 
   & &__menu {
+    z-index: 20;
     font-size: var(--font-size-small);
     color: var(--brand-main-active);
 
